# cuitxkx

./: .clangd  .gitignore  CMakeLists.txt  README.md  clangd_clang_format_setup.md  compile_commands.json  main.c  需求.md
.agents/rules/: cuitxkx.md
.cache/clangd/index/: con_desc.h.CD54F22A5389F403.idx  demo.c.442AF8764A620616.idx  item.c.4ACB21529BDAC4D1.idx  item.h.47572BFFB90FDE68.idx  main.c.22D172CEC1B37303.idx  parser.c.9C8B90A124A8522A.idx  parser.h.839AD38F81658ECD.idx  player.c.5116BE826013A4C7.idx  player.h.DDF4B91BF79AD045.idx  room.c.AEF25F3735A1F350.idx  room.h.CFE5C28FA0A240EF.idx  room_decs.h.27D776AB8C7EBB7C.idx  room_spawn.h.43D9B012952010FF.idx  room_spawn_treehole.h.8F64C24E86E90AEA.idx  util.h.22F229702968B557.idx  weapon_desc.h.F06103966583CE24.idx
demo/: demo.c
inc/: item.h  parser.h  player.h  room.h  skill.h  util.h
note/: fight.md
src/: compile_flags.txt  item.c  main.c  parser.c  player.c  room.c  skill.c
text/: con_desc.h  room_spawn.h  room_spawn_treehole.h  weapon_desc.h
